Bug 1362011 - Remove bogus image region from nav bar overflow button. r=nhnt11
MozReview-Commit-ID: IsYBYxmUFIu

UltraBlame original commit: 7924b351f42e2aebd9d5f9583312594ae0f5ea9d

--- a/browser/themes/linux/browser.css
+++ b/browser/themes/linux/browser.css
@@ -987,33 +987,6 @@ bottom
 ;
 }
 #
-nav
--
-bar
--
-overflow
--
-button
-{
--
-moz
--
-image
--
-region
-:
-rect
-(
--
-5px
-12px
-11px
--
-4px
-)
-;
-}
-#
 personal
 -
 bookmarks
